# passage-node

./: BUILD.bazel  package.json  tsconfig.json
src/classes/: Passage.ts  PassageError.ts  User.ts
src/types/: PassageConfig.ts
src/utils/: apiConfiguration.ts
